# CitySlop

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  project.godot
.claude/: settings.json  setup.sh
.github/: copilot-instructions.md
.github/agents/: build.agent.md  game-logic.agent.md  mechanics.agent.md  orchestrator.agent.md  ui.agent.md  world-design.agent.md
.github/hooks/: scope-check.sh
.github/instructions/: bazel.instructions.md  gdscript.instructions.md  scenes.instructions.md
.github/prompts/: new-scene.prompt.md  new-system.prompt.md
assets/audio/: .gdkeep
assets/sprites/: .gdkeep
scenes/main/: main.tscn
scenes/ui/: hud.tscn
scenes/world/: world.tscn
scripts/autoload/: game_state.gd  placement_state.gd  simulation_clock.gd
scripts/main/: camera.gd  main.gd
scripts/systems/: .gdkeep  placement.gd  simulation_tick.gd
scripts/ui/: hud.gd
scripts/world/: world.gd
tools/: buildifier.bzl  godot.bzl  godot4  playtest.sh  run_game.bat  run_game.sh  starpls.bzl
