# Root BUILD file for CitySlop

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "cityslop_unix",
    srcs = ["tools/run_game.sh"],
    data = [
        ":godot_project",
        "@godot//:godot_bin_path.txt",
        "@godot//:godot_files",
    ],
)

sh_binary(
    name = "cityslop.bat",
    srcs = ["tools/run_game.bat"],
    data = [
        ":godot_project",
        "@godot//:godot_bin_path.txt",
        "@godot//:godot_files",
    ],
)

alias(
    name = "cityslop",
    actual = select({
        "@platforms//os:windows": ":cityslop.bat",
        "//conditions:default": ":cityslop_unix",
    }),
)

filegroup(
    name = "godot_project",
    srcs = [
        "icon.svg",
        "project.godot",
    ] + glob(
        [
            "scenes/**/*.tscn",
            "scenes/**/*.tres",
            "scripts/**/*.gd",
            "assets/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "scenes",
    srcs = glob(
        [
            "scenes/**/*.tscn",
            "scenes/**/*.tres",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/**/*.gd"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "assets",
    srcs = glob(["assets/**"]),
    visibility = ["//visibility:public"],
)
